<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>csi_driver</name>
    <version>0.0.1</version>
    <description>Publishes frames from an Nvidia Jetson Nano CSI camera</description>
    <maintainer email="hunterbaker@me.com">Hunter Baker</maintainer>
    <license>GPL-3.0-only</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <exec_depend>ros2launch</exec_depend>
    <exec_depend>image_proc</exec_depend>
    <exec_depend>camera_calibration</exec_depend>

    <depend>rclcpp</depend>
    <depend>rclcpp_components</depend>
    <depend>image_transport</depend>
    <depend>cv_bridge</depend>
    <depend>libopencv-dev</depend>
    <depend>std_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>camera_info_manager</depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
